outputs_20260329-005401-549feb91/codegen/production/build_logs/compiler_stderr.log
C:\Users\extanke\AppData\Local\Temp\tdd_build_eqeob4ss\src\gtm_tom_3_phase_inverter_pwm.c: In function 'interruptGtmAtom':
C:\Users\extanke\AppData\Local\Temp\tdd_build_eqeob4ss\src\gtm_tom_3_phase_inverter_pwm.c:75:5: error: implicit declaration of function 'IfxPort_togglePin' [-Wimplicit-function-declaration]
   75 |     IfxPort_togglePin(LED);
      |     ^~~~~~~~~~~~~~~~~
C:\Users\extanke\AppData\Local\Temp\tdd_build_eqeob4ss\src\gtm_tom_3_phase_inverter_pwm.c: In function 'initGtmTomPwm':
C:\Users\extanke\AppData\Local\Temp\tdd_build_eqeob4ss\src\gtm_tom_3_phase_inverter_pwm.c:217:5: error: implicit declaration of function 'IfxPort_setPinModeOutput' [-Wimplicit-function-declaration]
  217 |     IfxPort_setPinModeOutput(LED, IfxPort_OutputMode_pushPull, IfxPort_OutputIdx_general);
      |     ^~~~~~~~~~~~~~~~~~~~~~~~
